--- a/LSTM Analysis.ipynb
+++ b/LSTM Analysis.ipynb
@@ -31,7 +31,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwordspwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -73,6 +106,13 @@
    "outputs": [],
    "source": [
     "imdb?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keras already has the iMdb dataset Built-in.The dataset 25000 training and testing reviews each. Also the data is formatted with each word replacing the rank of thier occurance "
    ]
   },
   {
@@ -119,19 +159,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://s3.amazonaws.com/text-datasets/imdb_word_index.json\n",
-      "1433600/1641221 [=========================>....] - ETA: 0s"
-     ]
-    }
-   ],
+   "source": [
+    "get_word_index contains the dictionary of all the words with their occurance rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "word_indices = imdb.get_word_index()"
    ]
@@ -1225,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1236,56 +1274,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 53,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "y_train[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "l = []\n",
-    "for train in X_train:\n",
-    "    l.append(len(train))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "238.71364"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(l)/len(l)"
+    "# First model with One LSTM Layer without dropout"
    ]
   },
   {
@@ -1324,15 +1316,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": true
@@ -1341,57 +1324,6 @@
    "source": [
     "x_train = sequence.pad_sequences(X_train, maxlen=500)\n",
     "x_test = sequence.pad_sequences(X_test, maxlen=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "500"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(x_train[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_train1 = np.asarray(X_train1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(np.asarray(y_train[0]))"
    ]
   },
   {
@@ -1462,6 +1394,13 @@
    "source": [
     "scores = model.evaluate(x_test, y_test, verbose=0)\n",
     "print(\"Accuracy: %.2f%%\" % (scores[1]*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see The validation accracy is 86.88 but the model is prone to overfitting hence we use droput layers"
    ]
   },
   {
@@ -1547,6 +1486,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving the model Using h5py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -1556,6 +1502,18 @@
    "source": [
     "model2.save(\"model2.h5\")\n",
     "model.save(\"model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model1 = load_model(\"model.h5\")\n",
+    "model2 = load_model(\"model2.h5\")"
    ]
   },
   {
@@ -1577,68 +1535,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.91889793]]\n"
-     ]
-    }
-   ],
    "source": [
-    "sentence = \"The film is outstanding definitely worth watching\"\n",
-    "sentence_list = []\n",
-    "for word in sentence.split():\n",
-    "    sentence_list.append(word_indices[word.lower()])\n",
-    "print(model.predict(np.array([sentence_list])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.85667175]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentence = \"The film is outstanding definitely worth watching\"\n",
-    "sentence_list = []\n",
-    "for word in sentence.split():\n",
-    "    sentence_list.append(word_indices[word.lower()])\n",
-    "print(model2.predict(np.array([sentence_list])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.53158981]]\n",
-      "[[ 0.34842947]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentence = \"One of the worst movies of all time would not recommend it\"\n",
-    "sentence_list = []\n",
-    "for word in sentence.split():\n",
-    "    sentence_list.append(word_indices[word.lower()])\n",
-    "print(model.predict(np.array([sentence_list])))\n",
-    "print(model2.predict(np.array([sentence_list])))"
+    "The validation accuracy might be less but this model is less prone to overfitting and is a more generalized model"
    ]
   },
   {
@@ -1667,7 +1567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
